--- a/src/index.css
+++ b/src/index.css
@@ -2,21 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-.subcategories li:hover{
-    color: rgb(48, 220, 48);
-    background-color: #04300a;
+#dropdownNavbarLink:hover .subcategories{
+    width: 100%;
+    height: auto;
 }
 
+
 .categories li{
-    padding: 0 15px;
+   
     font-size: 19px;
 }
 
-.subcategories{
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+.subcategories li{
+    font-size: 13px;
+    
 }
 
-.subcategories li{
-    font-size: 14px;
-}
